syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/client_CP";

import "internal/pkg/protofiles/client_CP/metadata_messages.proto";
import "internal/pkg/protofiles/client_CP/job_messages.proto";

service ClientCPServices{
   rpc GetStreamLogs(RequestForStreamLog) returns (stream Log);
   rpc ExecuteJob(RequestForExecute) returns (Response);
   rpc PostMetadata(RequestToPostMetadata) returns (MetadataName);
   rpc GetAllMetadata(RequestToGetAllMetadata) returns (MetadataArray);
}